@@ -1,5 +1,8 @@
 2008-06-29  Bradley M. Kuhn  <bkuhn@ebb.org>
 
+	* tests/test-upgrade.py.in (UpgraderTestCase.test03_noNetwork):
+	Wrote method.
+
 	* pokernetwork/upgrade.py (Upgrader.message): Wrote method; as
 	support for Upgrader.error
 
